# owly

./: .gitignore  .pyre_configuration  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/architecture/: pipeline.md
docs/contributing/: development.md  release-process.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: agent-and-tools.md  cancellation-and-timeouts.md  examples.md  providers.md
docs/reference/: agent.md  config.md  core-types.md  llm.md
examples/: README.md  agent_weather.py  cancel_stream.py  claude_stream.py  gemini_stream.py  openai_stream.py  vertex_stream.py
owly/core/: interfaces.py
owly/infra/: config.py  logging.py
owly/providers/: base.py
owly/runtime/: cancellation.py  normalizer.py  stream_pipeline.py
owly/utils/: __init__.py  async_utils.py
owly_ai/: __init__.py  agent.py  llm.py  memory.py  tools.py
owly_ai/core/: __init__.py  exceptions.py  interfaces.py  types.py
owly_ai/infra/: __init__.py  config.py  logging.py
owly_ai/providers/: __init__.py  claude.py  gemini.py  openai.py  vertex.py
owly_ai/runtime/: __init__.py  cancellation.py  normalizer.py  stream_pipeline.py
owly_ai/utils/: async_utils.py
tests/: test_providers_vertex_claude.py  test_runtime_cancellation.py  test_runtime_normalizer.py
